# Rocap

./: README.md  USAGE.md
.devcontainer/: devcontainer.json
docker/: Dockerfile  build.bash  docker-compose.override.linux.yml  docker-compose.override.windows.yml  docker-compose.override.wsl.yml  docker-compose.yml
rocap_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
rocap_ros/action/: FollowPath.action  Move.action
rocap_ros/config/: controller_position.yaml  controller_velocity.yaml  nav.rviz  nav2_params.yaml
rocap_ros/doc/figure/: usageFollowPath.excalidraw  usageMoveAction.excalidraw
rocap_ros/exemples/: launchFullStackReal.bash  launchFullStackSimulation.bash  launchFullStackSimulationTmux.bash
rocap_ros/launch/: navigation.launch.py  pc_assembler.launch.py  robot_state_publisher.launch.py  rocap.launch.py  rocap_bridge.launch.py  rocap_demo.launch.py  slam_lidar_rgbd.launch.py  velodyne.launch.py  velodyne_driver.launch.py
rocap_ros/node/api_bridge/: openapi.json  ros2_api_bridge.py  transformlisener.py  transformlistener.py
rocap_ros/node/auxilliary/: velodyne_fix.cpp
rocap_ros/node/nav/: AStarPlanner.cpp  localPlanner.py  planner3D.cpp
rocap_ros/node/nav/include/: AStarPlanner.h  planner3D.h
rocap_ros/permissions/: README.md
rocap_ros/plugins/include/: gazebo_rope.hpp
rocap_ros/plugins/src/: gazebo_rope.cpp
rocap_ros/urdf/part/IMU/: IMU.urdf.xacro
rocap_ros/urdf/part/camera/cameraDepth/: cameraDepth.urdf.xacro
rocap_ros/urdf/part/lidar/lidar3D/: lidar3D.urdf.xacro
rocap_ros/urdf/part/lidar/velodyme_puck/: velodyme_puck.urdf.xacro
rocap_ros/urdf/part/lidar/velodyme_puck/mesh/: VLP-16.stl
rocap_ros/urdf/part/movement/moving_base_6_axis/: moving_base_6_axis.urdf.xacro
rocap_ros/urdf/part/movement/rotation_axis/: rotation_axis.urdf.xacro
rocap_ros/urdf/part/movement/translation_axis/: translation_axis.urdf.xacro
rocap_ros/urdf/rocap/: model.config  rocap.urdf  rocap.urdf.xacro
rocap_ros/urdf/rocap_base/: model.config  rocap_base.urdf.xacro
rocap_ros/urdf/rocap_base/mesh/: Cable_module_exterieur_simple.stl
rocap_ros/urdf/rocap_body/: model.config  rocap_body.urdf  rocap_body.urdf.xacro
rocap_ros/urdf/rocap_body/mesh/: Bras_court_simple.stl  Bras_court_simple.stp  Bras_long_simple.stl  Bras_long_simple.stp  Cable_module_centre_simple.stp  Cable_module_exterieur_simple2.stp  RoCaP_centre_simple.stp  config_bras
rocap_ros/urdf/rocap_flying_demo/: model.config  rocap_flying_demo.urdf  rocap_flying_demo.urdf.xacro
rocap_ros/world/: basicHouse.world
